NIFI-15422 Added unit tests for property migration of processors in extended bundle nifi-standard-bundle.